<resources>
    <string name="messenger_send_button_text">Send</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b>&lt;br />on your smartphone or computer&lt;br />and enter this code</string>
    <string name="account_menu_add_account">Add an account</string>
    <string name="account_picker_list_body">Which account do you want to sign in to this app with?</string>
    <string name="account_picker_list_header">Choose one</string>
    <string name="account_picker_menu_dismiss">Close</string>
    <string name="account_setting_up">Please wait while we finish adding your account.</string>
    <string name="account_setting_up_header">"You're almost done"</string>
    <string name="app_market">en-US</string>
    <string name="authentication_button_finish">finish</string>
    <string name="authentication_button_next">next</string>
    <string name="authentication_button_previous">previous</string>
    <string name="error_body_generic_failure">Please try again.</string>
    <string name="error_header_generic_failure">Something went wrong</string>
    <string name="error_header_server_network_error">We are having problems connecting to the server</string>
    <string name="error_overlay_no_network">You have no internet connection</string>
    <string name="sign_out_dialog_button_cancel">Cancel</string>
    <string name="sign_out_dialog_button_sign_out">Sign out</string>
    <string name="sign_out_dialog_checkbox">Sign out of all Microsoft apps using %1$s</string>
    <string name="sign_out_dialog_title">Do you want to sign out of this app?</string>
    <string name="user_tile_image_content_description">"The user's image."</string>
    <string name="webflow_header">Microsoft account</string>
    <string name="sdk_version_name">2.1.0504.0524</string>
    <string name="xbid_ban_error_header_android">Hi, %1$s.</string>
    <string name="xbid_ban_error_body_android">"We can't sign you in because your account has been suspended from Xbox Live."</string>
    <string name="xbid_creation_error_android">"Sorry, we couldn't complete your Xbox profile. If it happens again, try setting it up at &lt;u>Xbox.com&lt;/u>"</string>
    <string name="xbid_catchall_error_android">Sorry, something went wrong. Give it another try, or try on &lt;u>Xbox.com&lt;/u></string>
    <string name="xbid_error_offline_android">"Make sure you're online, then try again. We can't connect right now."</string>
    <string name="xbid_close">Close</string>
    <string name="xbid_try_again">Try again</string>
    <string name="xbid_more_info">More info</string>
    <string name="xbid_sign_up_header">Welcome to Xbox</string>
    <string name="xbid_sign_up_subheader_android">"Here's your name on Xbox (or \"gamertag\"). Change it if you want!"</string>
    <string name="xbid_gamertag_placeholder">Gamertag</string>
    <string name="xbid_privacy_settings_header_android">Privacy settings: %1$s</string>
    <string name="xbid_age_group_adult">Adult default</string>
    <string name="xbid_age_group_teen">Teen default</string>
    <string name="xbid_age_group_child">Child default</string>
    <string name="xbid_age_group_adult_details_android">"Your friends and their friends can see if you're online, your game clips, and your recent apps and games. You can change these on &lt;u>Xbox.com&lt;/u>"</string>
    <string name="xbid_age_group_teen_details_android">"Your Xbox friends and their friends can see your real name and your profile. Your Xbox friends can see if you're online, your game clips, and your recent apps and games"</string>
    <string name="xbid_age_group_child_details_android">"Your Xbox friends can see your profile, but not your real name. Friends and their friends can see if you're online and available to play, but you'll need a parent's permission to add friends"</string>
    <string name="xbid_next">Next</string>
    <string name="xbid_claim_it">Claim it!</string>
    <string name="xbid_another_gamertag">Already have a gamertag?</string>
    <string name="xbid_another_sign_in">Sign in with a different Microsoft account</string>
    <string name="xbid_gamertag_check_availability">Check availability</string>
    <string name="xbid_gamertag_not_available_android">"That's taken. How about:"</string>
    <string name="xbid_gamertag_checking_android">Checking…</string>
    <string name="xbid_gamertag_available">Available!</string>
    <string name="xbid_gamertag_checking_error">An error occurred. Try again?</string>
    <string name="xbid_welcome_back">Welcome back!</string>
    <string name="xbid_customize_profile">You can customize your profile in the Xbox app</string>
    <string name="xbid_lets_play_android">"Let's play"</string>
    <string name="xbid_different_gamer_tag_answer">Switch accounts</string>
    <string name="xbid_introducing_android">Introducing…</string>
    <string name="xbid_gamertag_not_available_no_suggestions_android">"That's taken."</string>
    <string name="xbid_first_and_last_name_android">%1$s %2$s</string>
    <string name="xbid_friend_finder_opt_in">Find friends</string>
    <string name="xbid_voice_over_game_score_label_text">Gamerscore</string>
    <string name="xbid_voice_over_close_button_text">Close</string>
    <string name="xbox_live_game_invite_title">Game invite</string>
    <string name="xbox_live_game_invite_body">%1$s has invited you to play %2$s</string>
    <string name="xbox_live_game_invite_body_with_context_string">Xbox Live Game Invite Body With Context String</string>
    <string name="xbid_tools_gamertag">MasterChef</string>
    <string name="xbid_tools_user_name">John Smith</string>
    <string name="xbid_tools_email">john.smith@hotmail.com</string>
    <string name="xbid_tools_empty" />
    <string name="ChangeRelationship_Label_Friend">Friend</string>
    <string name="ChangeRelationship_Label_Favorite">Favorite</string>
    <string name="ChangeRelationship_RadioButton_Subtext_Favorite">"Favorite friends go first on your friends list. You'll see when they go online or start broadcasting."</string>
    <string name="ChangeRelationship_RadioButton_Subtext_Friend">Friends show up on your friends list and activity feed. They see you as a new follower.</string>
    <string name="ChangeRelationship_Checkbox_Subtext_ShareRealName_Everyone">You share your real name with everyone on Xbox. Make changes in the Xbox app.</string>
    <string name="ChangeRelationship_Checkbox_Subtext_ShareRealName_Friends">You share your real name with all your friends on Xbox. Make changes in the Xbox app.</string>
    <string name="Profile_Profile_RemoveFriend">Remove friend</string>
    <string name="RealNameSharing_Share">Share real name</string>
    <string name="OK_Text">OK</string>
    <string name="MessageDialog_Cancel">Cancel</string>
    <string name="Service_ErrorText">Something went wrong. Please try again later.</string>
    <string name="Profile_ChangeFriendship">Change friendship</string>
    <string name="Profile_Profile_AddFriend">Add friend</string>
    <string name="Narrator_Mute">Mute</string>
    <string name="Narrator_Unmute">Unmute</string>
    <string name="Profile_Profile_Block">Block</string>
    <string name="Profile_Profile_Unblock">Unblock</string>
    <string name="ProfileCard_Report">Report</string>
    <string name="ProfileCard_Report_SelectReason">Select a reason</string>
    <string name="ProfileCard_Report_InfoString_Android">Why are you reporting %1$s?</string>
    <string name="ProfileCard_Report_BioLoc">Bio or location</string>
    <string name="ProfileCard_Report_Cheating">Cheating</string>
    <string name="ProfileCard_Report_PlayerName">Player name or gamertag</string>
    <string name="ProfileCard_Report_PlayerPic">Player picture</string>
    <string name="ProfileCard_Report_QuitEarly">Quitting early</string>
    <string name="ProfileCard_Report_Unsporting">Unsporting behavior</string>
    <string name="ProfileCard_Report_TextReasonHint">Tell us more (optional)</string>
    <string name="ProfileCard_Report_SubmitButton">Report to Xbox</string>
    <string name="Profile_ViewInXboxApp">View in the Xbox app</string>
    <string name="TextInput_Confirm">Done</string>
    <string name="FriendFinder_Link_Phone_Subtext">Link your account</string>
    <string name="FriendFinder_Link_Phone">Find phone contacts</string>
    <string name="FriendFinder_Phone_Next_ButtonText">Next</string>
    <string name="FriendFinder_Phone_VerifyCode_ButtonText">Verify code</string>
    <string name="FriendFinder_PhoneNoContacts_GamingIsBetter_Dialog_Text">There are several ways to find people you know.</string>
    <string name="FriendFinder_PhoneVerification_Dialog_Title">Verify your code</string>
    <string name="FriendFinder_PhoneVerification_Dialog_Text">Enter the verification code we sent to your phone.</string>
    <string name="FriendFinder_PhoneContacts_GamingIsBetter_Dialog_Title">Gaming is more fun with friends</string>
    <string name="FriendFinder_InviteFriends">Invite friends</string>
    <string name="FriendFinder_EnterCode">Enter code</string>
    <string name="FriendFinder_ResendTheCode">Resend the code</string>
    <string name="FriendFinder_CallMe">Call me</string>
    <string name="Suggestions_Invite_Phone_Contacts_Text">Invite your phone contacts</string>
    <string name="Suggestions_Invite_Phone_Contacts_Subtext">Send a message to your friends</string>
    <string name="FriendFinder_Link_Facebook">Link your Facebook account</string>
    <string name="FriendFinder_OptIn">Find friends</string>
    <string name="FriendFinder_LinkFacebook_Subtext">Find Facebook friends</string>
    <string name="FriendFinder_Facebook_ViewSuggestion_Buttontext">See suggestions</string>
    <string name="FriendFinder_Find_By_Gamertag">Find friends by gamertag</string>
    <string name="FriendFinder_Find_By_Gamertag_Subtext">Search for gamertags you already know</string>
    <string name="FriendFinder_Invite_Facebook_Title">Invite the rest of your Facebook friends to Xbox</string>
    <string name="FriendFinder_Facebook_Share_Subtitle">Share an invitation to join Xbox</string>
    <string name="ic_changeFriendShip"></string>
    <string name="ic_PlayerAdd"></string>
    <string name="ic_VolumeDisabled2"></string>
    <string name="ic_VolumeMute"></string>
    <string name="ic_BadRecommendation"></string>
    <string name="ic_Complaint"></string>
    <string name="ic_GamerScore"></string>
    <string name="ic_Search"></string>
    <string name="ic_PhoneCall"></string>
    <string name="ic_Repeat"></string>
    <string name="ic_ApplicationLaunch"></string>
</resources>