<?xml version="1.0" encoding="utf-8"?>
<com.microsoft.xbox.xle.ui.XLERootView android:id="@id/profile_root" android:background="@drawable/background_default" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xle="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <FrameLayout android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="2.0">
            <com.microsoft.xbox.toolkit.ui.XLERoundedUniversalImageView android:layout_gravity="center" android:id="@id/profile_gamerpic" android:layout_width="@dimen/profileMsaPicSize" android:layout_height="@dimen/profileMsaPicSize" android:src="@drawable/placeholder_x" android:maxWidth="@dimen/profileMsaPicSize" android:maxHeight="@dimen/profileMsaPicSize" android:cropToPadding="false" />
        </FrameLayout>
        <FrameLayout android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="3.0">
            <com.microsoft.xbox.toolkit.ui.FastProgressBar android:layout_gravity="center" android:id="@id/profile_screen_loading" android:visibility="visible" android:layout_width="64.0dip" android:layout_height="64.0dip" android:indeterminateOnly="true" android:indeterminateDrawable="@drawable/rotate_loading_rings_small" />
            <ScrollView android:id="@id/profile_screen_content_list" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
                <LinearLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView android:textSize="17.0sp" android:id="@id/profile_realname" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="30.0dip" android:layout_marginBottom="4.0dip" android:singleLine="true" android:maxLength="30" style="@style/SUI_white" />
                        <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView android:textSize="17.0sp" android:layout_gravity="center_vertical" android:id="@id/profile_gamerscore_icon" android:visibility="gone" android:layout_marginTop="1.0dip" android:layout_marginRight="1.0dip" android:text="@string/ic_GamerScore" style="@style/xbox_symbol" />
                        <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView android:textSize="17.0sp" android:id="@id/profile_gamerscore" android:padding="2.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:includeFontPadding="false" style="@style/SUI_white" />
                    </LinearLayout>
                    <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView android:textSize="40.0sp" android:textStyle="bold" android:ellipsize="end" android:id="@id/profile_gamertag" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" android:layout_marginBottom="5.0dip" android:singleLine="true" android:includeFontPadding="false" style="@style/SUI_white" />
                    <com.microsoft.xbox.xle.ui.IconFontToggleButton android:id="@id/profile_follow" android:background="@drawable/common_button_background" android:visibility="gone" android:layout_width="@dimen/profileMsaPicSize" android:layout_height="@dimen/profileSocialButtonsHeight" android:layout_marginLeft="-5.0dip" android:layout_marginTop="@dimen/profileSocialButtonsTopMargin" xle:text_checked="@string/Profile_ChangeFriendship" xle:text_unchecked="@string/Profile_Profile_AddFriend" xle:icon_checked="@string/ic_changeFriendShip" xle:icon_unchecked="@string/ic_PlayerAdd" xle:icon_size="16.0sp" />
                    <com.microsoft.xbox.xle.ui.IconFontToggleButton android:id="@id/profile_mute" android:background="@drawable/common_button_background" android:visibility="gone" android:layout_width="@dimen/profileMsaPicSize" android:layout_height="@dimen/profileSocialButtonsHeight" android:layout_marginLeft="-5.0dip" android:layout_marginTop="@dimen/profileSocialButtonsTopMargin" xle:text_checked="@string/Narrator_Unmute" xle:text_unchecked="@string/Narrator_Mute" xle:icon_checked="@string/ic_VolumeDisabled2" xle:icon_unchecked="@string/ic_VolumeMute" xle:icon_size="18.0sp" />
                    <com.microsoft.xbox.xle.ui.IconFontToggleButton android:id="@id/profile_report" android:background="@drawable/common_button_background" android:visibility="gone" android:layout_width="@dimen/profileMsaPicSize" android:layout_height="@dimen/profileSocialButtonsHeight" android:layout_marginLeft="-5.0dip" android:layout_marginTop="@dimen/profileSocialButtonsTopMargin" xle:text_checked="@string/ProfileCard_Report" xle:text_unchecked="@string/ProfileCard_Report" xle:icon_checked="@string/ic_Complaint" xle:icon_unchecked="@string/ic_Complaint" xle:icon_size="16.0sp" />
                    <com.microsoft.xbox.xle.ui.IconFontToggleButton android:id="@id/profile_block" android:background="@drawable/common_button_background" android:visibility="gone" android:layout_width="@dimen/profileMsaPicSize" android:layout_height="@dimen/profileSocialButtonsHeight" android:layout_marginLeft="-5.0dip" android:layout_marginTop="@dimen/profileSocialButtonsTopMargin" xle:text_checked="@string/Profile_Profile_Unblock" xle:text_unchecked="@string/Profile_Profile_Block" xle:icon_checked="@string/ic_BadRecommendation" xle:icon_unchecked="@string/ic_BadRecommendation" xle:icon_size="14.0sp" />
                    <com.microsoft.xbox.xle.ui.IconFontToggleButton android:id="@id/profile_view_in_xbox_app" android:background="@drawable/common_button_background" android:visibility="gone" android:layout_width="@dimen/profileMsaPicSize" android:layout_height="@dimen/profileSocialButtonsHeight" android:layout_marginLeft="-5.0dip" android:layout_marginTop="@dimen/profileSocialButtonsTopMargin" xle:text_checked="@string/Profile_ViewInXboxApp" xle:text_unchecked="@string/Profile_ViewInXboxApp" xle:icon_checked="@string/ic_ApplicationLaunch" xle:icon_unchecked="@string/ic_ApplicationLaunch" xle:icon_size="14.0sp" />
                    <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView android:textSize="13.0sp" android:textStyle="italic" android:layout_gravity="center_vertical" android:id="@id/profile_view_in_xbox_app_subtext" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="35.0dip" android:layout_marginTop="-10.0dip" android:includeFontPadding="false" xle:typefaceSource="fonts/SegoeWP.ttf" style="@style/standard_subText" />
                </LinearLayout>
            </ScrollView>
        </FrameLayout>
    </LinearLayout>
</com.microsoft.xbox.xle.ui.XLERootView>
