<?xml version="1.0" encoding="utf-8"?>
<com.microsoft.xbox.xle.ui.XLERootView android:padding="@dimen/friendFinderPageMargin" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xle="http://schemas.android.com/apk/res-auto">
    <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView android:id="@id/friendfinder_invite_title" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/FriendFinder_Title" />
    <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView android:id="@id/friendfinder_invite_subtitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/friendFinderVerticalMargin" android:layout_marginBottom="@dimen/friendFinderVerticalMargin" android:layout_below="@id/friendfinder_invite_title" style="@style/standard_text" />
    <com.microsoft.xbox.xle.ui.ImageTitleSubtitleButton android:id="@id/friendfinder_invite_facebook" android:background="@drawable/common_button_background" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_below="@id/friendfinder_invite_subtitle" xle:text_title="@string/FriendFinder_Invite_Facebook_Title" xle:text_subtitle="@string/FriendFinder_Facebook_Share_Subtitle" />
    <com.microsoft.xbox.xle.ui.IconFontSubTextButton android:id="@id/friendfinder_invite_phone" android:background="@drawable/common_button_background" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_below="@id/friendfinder_invite_subtitle" xle:text_title="@string/Suggestions_Invite_Phone_Contacts_Text" xle:text_subtitle="@string/Suggestions_Invite_Phone_Contacts_Subtext" xle:icon_uri="@string/ic_PhoneCall" xle:icon_bg="@color/XboxOneGreen" />
    <com.microsoft.xbox.toolkit.ui.XLEButton android:id="@id/friendfinder_invite_next" android:layout_width="250.0dip" android:layout_height="wrap_content" android:text="@string/FriendFinder_Phone_Next_ButtonText" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" style="@style/friendfinder_button" />
</com.microsoft.xbox.xle.ui.XLERootView>
