<?xml version="1.0" encoding="utf-8"?>
<com.microsoft.xbox.xle.ui.XLERootView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xle="http://schemas.android.com/apk/res-auto">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:padding="@dimen/friendFinderPageMargin" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/FriendFinder_PhoneContacts_GamingIsBetter_Dialog_Title" style="@style/FriendFinder_Title" />
            <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/FriendFinder_PhoneNoContacts_GamingIsBetter_Dialog_Text" style="@style/standard_text" />
            <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/friendFinderVerticalMargin" android:layout_marginBottom="@dimen/friendFinderVerticalMargin" android:text="@string/FriendFinder_OptIn" style="@style/FriendFinder_Title" />
            <com.microsoft.xbox.xle.ui.ImageTitleSubtitleButton android:id="@id/friendfinder_link_facebook" android:background="@drawable/common_button_background" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" xle:text_title="@string/FriendFinder_LinkFacebook_Subtext" xle:text_subtitle="@string/FriendFinder_Link_Facebook" />
            <com.microsoft.xbox.xle.ui.IconFontSubTextButton android:id="@id/friendfinder_link_phone" android:background="@drawable/common_button_background" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" xle:text_title="@string/FriendFinder_Link_Phone" xle:text_subtitle="@string/FriendFinder_Link_Phone_Subtext" xle:icon_uri="@string/ic_PhoneCall" xle:icon_bg="@color/white_15_percent" />
            <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
                <com.microsoft.xbox.xle.ui.IconFontSubTextButton android:id="@id/friendfinder_link_search" android:background="@drawable/common_button_background" android:layout_width="fill_parent" android:layout_height="wrap_content" xle:text_title="@string/FriendFinder_Find_By_Gamertag" xle:text_subtitle="@string/FriendFinder_Find_By_Gamertag_Subtext" xle:icon_uri="@string/ic_Search" xle:icon_bg="@color/white_15_percent" />
                <RelativeLayout android:id="@id/friendfinder_search_layout" android:background="@color/backgroundColor" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <FrameLayout android:id="@id/friendfinder_search_icon" android:background="@drawable/friendfinder_home_search_background" android:focusable="true" android:clickable="true" android:layout_width="@dimen/friendFinderIconButtonHeight" android:layout_height="@dimen/friendFinderIconButtonHeight" android:layout_marginRight="@dimen/friendFinderPageMargin" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:contentDescription="@string/FriendFinder_Find_By_Gamertag_Subtext">
                        <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView android:gravity="center" android:layout_width="@dimen/friendFinderIconButtonWidth" android:layout_height="@dimen/friendFinderIconButtonHeight" android:text="@string/ic_Search" style="@style/xbox_symbol" />
                    </FrameLayout>
                    <View android:background="@color/white_10_percent" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_toRightOf="@id/friendfinder_search_icon" android:layout_alignParentTop="true" />
                    <View android:background="@color/white_10_percent" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_toRightOf="@id/friendfinder_search_icon" android:layout_alignParentBottom="true" />
                    <EditText android:id="@id/friendfinder_search_edittext" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent" android:hint="@string/FriendFinder_Find_By_Gamertag" android:layout_toRightOf="@id/friendfinder_search_icon" android:layout_centerVertical="true" android:imeOptions="actionSearch" />
                </RelativeLayout>
            </FrameLayout>
            <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView android:id="@id/friendfinder_home_invite_friends_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/friendFinderVerticalMargin" android:layout_marginBottom="@dimen/friendFinderVerticalMargin" android:text="@string/FriendFinder_InviteFriends" style="@style/FriendFinder_Title" />
            <com.microsoft.xbox.xle.ui.ImageTitleSubtitleButton android:id="@id/friendfinder_home_invite_facebook" android:background="@drawable/common_button_background" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" xle:text_title="@string/FriendFinder_LinkFacebook_Subtext" xle:text_subtitle="@string/FriendFinder_Facebook_ViewSuggestion_Buttontext" />
            <com.microsoft.xbox.xle.ui.IconFontSubTextButton android:id="@id/friendfinder_home_invite_phone" android:background="@drawable/common_button_background" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" xle:text_title="@string/FriendFinder_Link_Phone" xle:text_subtitle="@string/FriendFinder_Facebook_ViewSuggestion_Buttontext" xle:icon_uri="@string/ic_PhoneCall" xle:icon_bg="@color/white_15_percent" />
            <com.microsoft.xbox.toolkit.ui.XLEButton android:layout_gravity="center" android:id="@id/friendfinder_home_done" android:visibility="visible" android:layout_width="250.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/friendFinderVerticalMargin" android:text="@string/TextInput_Confirm" style="@style/friendfinder_button" />
        </LinearLayout>
    </ScrollView>
    <FrameLayout android:id="@id/friendfinder_home_loading" android:background="@color/backgroundColor" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.microsoft.xbox.toolkit.ui.FastProgressBar android:layout_gravity="center" android:visibility="visible" android:layout_width="64.0dip" android:layout_height="64.0dip" android:indeterminateOnly="true" android:indeterminateDrawable="@drawable/rotate_loading_rings_small" />
    </FrameLayout>
</com.microsoft.xbox.xle.ui.XLERootView>
