<?xml version="1.0" encoding="utf-8"?>
<com.microsoft.xbox.xle.ui.XLERootView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xle="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/friendFinderPageMargin" android:layout_marginTop="@dimen/friendFinderPageMargin" android:layout_marginRight="@dimen/friendFinderPageMargin" android:text="@string/FriendFinder_PhoneVerification_Dialog_Title" style="@style/FriendFinder_Title" />
        <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/friendFinderPageMargin" android:layout_marginTop="@dimen/friendFinderVerticalMargin" android:layout_marginRight="@dimen/friendFinderPageMargin" android:text="@string/FriendFinder_PhoneVerification_Dialog_Text" style="@style/standard_text" />
        <View android:background="@color/white_10_percent" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="@dimen/friendFinderVerticalMargin" android:layout_marginBottom="@dimen/friendFinderPageMargin" />
        <EditText android:textColorHint="@color/white_10_percent" android:id="@id/friendfinder_verify_code_edit_text" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/friendFinderPageMargin" android:hint="@string/FriendFinder_EnterCode" android:inputType="phone" />
        <View android:background="@color/white_10_percent" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="@dimen/friendFinderPageMargin" />
        <com.microsoft.xbox.xle.ui.IconFontToggleButton android:id="@id/friendfinder_verify_resend" android:background="@drawable/common_button_background" android:layout_width="wrap_content" android:layout_height="@dimen/profileSocialButtonsHeight" android:layout_marginLeft="@dimen/friendFinderPageMargin" android:layout_marginTop="@dimen/friendFinderVerticalMargin" xle:text_checked="@string/FriendFinder_ResendTheCode" xle:text_unchecked="@string/FriendFinder_ResendTheCode" xle:icon_checked="@string/ic_Repeat" xle:icon_unchecked="@string/ic_Repeat" />
        <com.microsoft.xbox.xle.ui.IconFontToggleButton android:id="@id/friendfinder_verify_call_me" android:background="@drawable/common_button_background" android:layout_width="wrap_content" android:layout_height="@dimen/profileSocialButtonsHeight" android:layout_marginLeft="@dimen/friendFinderPageMargin" android:layout_marginTop="5.0dip" xle:text_checked="@string/FriendFinder_CallMe" xle:text_unchecked="@string/FriendFinder_CallMe" xle:icon_checked="@string/ic_PhoneCall" xle:icon_unchecked="@string/ic_PhoneCall" />
    </LinearLayout>
    <com.microsoft.xbox.toolkit.ui.XLEButton android:id="@id/friendfinder_verify_verify_code" android:layout_width="250.0dip" android:layout_height="wrap_content" android:layout_margin="@dimen/friendFinderPageMargin" android:text="@string/FriendFinder_Phone_VerifyCode_ButtonText" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" style="@style/friendfinder_button" />
    <FrameLayout android:id="@id/friendfinder_verify_loading" android:background="@color/backgroundColor" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.microsoft.xbox.toolkit.ui.FastProgressBar android:layout_gravity="center" android:visibility="visible" android:layout_width="64.0dip" android:layout_height="64.0dip" android:indeterminateOnly="true" android:indeterminateDrawable="@drawable/rotate_loading_rings_small" />
    </FrameLayout>
</com.microsoft.xbox.xle.ui.XLERootView>
