<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_gravity="center" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.microsoft.xbox.toolkit.ui.CustomTypefaceTextView android:textSize="18.0sp" android:ellipsize="end" android:id="@id/report_user_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:singleLine="true" android:includeFontPadding="false" android:layout_alignParentTop="true" style="@style/SUI_white" />
    <Spinner android:id="@id/report_user_reason" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:popupBackground="@color/backgroundColor" android:layout_below="@id/report_user_title" android:spinnerMode="dropdown" />
    <LinearLayout android:orientation="horizontal" android:id="@id/report_user_buttons" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="3.0dip" android:weightSum="2.0" android:layout_alignParentBottom="true">
        <com.microsoft.xbox.toolkit.ui.XLEButton android:gravity="center" android:id="@id/report_user_cancel" android:layout_width="0.0dip" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:text="@string/MessageDialog_Cancel" android:layout_weight="1.0" style="@style/friendfinder_button" />
        <com.microsoft.xbox.toolkit.ui.XLEButton android:gravity="center" android:id="@id/report_user_submit" android:layout_width="0.0dip" android:layout_height="40.0dip" android:text="@string/ProfileCard_Report_SubmitButton" android:layout_weight="1.0" style="@style/friendfinder_button" />
    </LinearLayout>
    <EditText android:textColor="@color/XboxWhite" android:textColorHint="@color/white_60_percent" android:gravity="center|left|top" android:id="@id/report_user_text" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="15.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="15.0dip" android:layout_marginBottom="5.0dip" android:hint="@string/ProfileCard_Report_TextReasonHint" android:scrollHorizontally="false" android:singleLine="false" android:layout_above="@id/report_user_buttons" android:layout_below="@id/report_user_reason" />
</RelativeLayout>
